<resources>
    <string name="app_name">TradeIt</string>

    <!-- about -->
    <string name="about">TradeIt!\nVersión 1.0.4060101\n\nDistribuido bajo licencia "CC BY 4.0 Attribution 4.0 International".\n\nDesarrollado por: Marco Zúñiga Cuadrado</string>

    <!-- mainactivity-->
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarme</string>

    <!-- startactivity-->
    <string name="products">Productos</string>
    <string name="services">Servicios</string>
    <string name="favourites">Favoritos</string>
    <string name="messages">Mensajes</string>
    <string name="my_account">Mi cuenta</string>

    <!-- registeractivity-->
    <string name="repeatpassword">Repetir contraseña</string>
    <string name="registeruser">Registrarme</string>

    <!-- newproduct-->
    <string name="np_title">Publicar producto</string>
    <string name="np_smalltitle">\nIntroduce los datos básicos de tu producto.\nMás adelante, podrás subir una imagen.</string>
    <string name="sv_smalltitle">\nIntroduce los datos básicos del servicio que quieres ofrecer. Más adelante, podrás subir una imagen.</string>
    <string name="np_smallimage">\nSelecciona una imagen de tu dispositivo.\nEsta imagen se mostrará en la página de\nvisualización del producto o servicio.</string>
    <string name="np_name">Nombre</string>
    <string name="np_description">Descripción</string>
    <string name="np_category">Categoría</string>
    <string name="np_ubication">Ubicación</string>
    <string name="np_price">Precio (€)</string>
    <string name="np_publish">Publicar producto >>></string>
    <string name="np_next">Siguiente >>></string>
    <string name="np_imagetitle">Título del producto</string>

    <!-- myaccount -->
    <string name="mc_title">Mi cuenta</string>
    <string name="mc_smalltitle">\nConsulta y modifica fácilmente los datos\nde tu cuenta.</string>
    <string name="mc_testname">Nombre Prueba</string>
    <string name="mc_rating">Valoración:</string>
    <string name="mc_info">Información de la cuenta</string>
    <string name="mc_products">Mis productos</string>
    <string name="mc_services">Mis servicios</string>
    <string name="mc_config">Configuración</string>

    <!-- productdetail -->
    <string name="pd_title">Detalles de producto</string>
    <string name="pd_description">Descripción completa del producto seleccionado.</string>
    <string name="pd_testtitle">Título del producto</string>
    <string name="pd_testprice">1500€</string>
    <string name="pd_testdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="pd_testuser">Usuario Pruebez</string>
    <string name="pd_testdate">Publicado el 27/04/24</string>
    <!-- fragmentproduct-->
    <string name="searchproduct">Busca un producto...</string>

    <!-- serviceproduct -->
    <string name="searchservice">Contrata un servicio...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_rating_prompt">Seleccionar...</string>
    <string-array name="rating_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="select_category_prompt">Categoría...</string>
    <string-array name="category_options">
        <item>Ropa y accesorios</item>
        <item>Electrónica</item>
        <item>Hogar y jardín</item>
        <item>Deportes</item>
        <item>Belleza y cuidado personal</item>
        <item>Libros</item>
        <item>Arte y manualidades</item>
        <item>Juegos</item>
        <item>Instrumentos musicales</item>
        <item>Automovilismo</item>
        <item>Electrodomésticos</item>
        <item>Mascotas</item>
        <item>Viajes</item>
        <item>Comida y bebida</item>
        <item>Informática</item>
        <item>Salud y bienestar</item>
    </string-array>

    <string name="select_service_category">Categoría...</string>
    <string-array name="service_options">
        <item>Limpieza</item>
        <item>Cuidado de niños</item>
        <item>Paseo de mascotas</item>
        <item>Edición de vídeo</item>
        <item>Edición de fotos</item>
        <item>Redacción y corrección de textos</item>
        <item>Clases particulares</item>
        <item>Reparaciones y mantenimiento</item>
        <item>Asistencia informática</item>
        <item>Diseño gráfico</item>
        <item>Marketing digital</item>
        <item>Consultoría financiera</item>
        <item>Servicios legales</item>
        <item>Organización de eventos</item>
        <item>Asesoría nutricional</item>
        <item>Entrenamiento personal</item>
        <item>Transporte y mudanzas</item>
        <item>Cuidados de salud a domicilio</item>
        <item>Planificación de viajes</item>
        <item>Asesoría en redes sociales</item>
    </string-array>

    <string-array name="category_options_service">
        <item>Precio fijo</item>
        <item>Precio por hora</item>
    </string-array>

    <!-- userfragment -->

</resources>