<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="60dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/newProductTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mc_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/newProductSmallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mc_smalltitle"
            android:textColor="@color/black"
            android:textSize="16sp"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/iv_border"></ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/displayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mc_testname"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mc_rating"
                    android:textColor="@color/black"
                    android:textSize="14sp"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/titleLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/infoButton"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:text="@string/mc_info"></Button>
        <Button
            android:id="@+id/productsButton"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:text="@string/mc_products"></Button>
        <Button
            android:id="@+id/servicesButton"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:text="@string/mc_services"></Button>
        <Button
            android:id="@+id/configButton"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:text="@string/mc_config"></Button>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons" />
</androidx.constraintlayout.widget.ConstraintLayout>