<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/logopng">
    </ImageView>

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerButton">
        <EditText
            android:id="@+id/emailET"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:maxLines="1"
            android:hint="@string/email"
            android:background="@drawable/tb_background">
        </EditText>

        <EditText
            android:id="@+id/displayNameET"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:hint="@string/np_name"
            android:background="@drawable/tb_background">
        </EditText>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:background="@drawable/tb_background">
        </EditText>

        <EditText
            android:id="@+id/password2ET"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:hint="@string/repeatpassword"
            android:background="@drawable/tb_background">
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/registeruser"
        android:backgroundTint="@color/main"
        app:layout_constraintTop_toBottomOf="@id/fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/pb_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>