<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewProductActivity">

    <TextView
        android:id="@+id/newProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/np_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <LinearLayout
        android:id="@+id/addProductLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProduct"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/productTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/np_name"
                android:layout_marginRight="10dp">
            </TextView>

            <EditText
                android:id="@+id/productTitleET"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:textSize="15sp"
                android:maxLines="1">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/np_description"
                android:layout_marginRight="10dp">
            </TextView>

            <EditText
                android:id="@+id/productDescriptionET"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:textSize="15sp"
                android:maxLines="4">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/productSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/np_category"
                android:layout_marginRight="10dp">
            </TextView>

            <EditText
                android:id="@+id/productCategoryET"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:textSize="15sp"
                android:maxLines="4">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/np_price"
                android:layout_marginRight="10dp">
            </TextView>

            <EditText
                android:id="@+id/productPriceET"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:textSize="15sp"
                android:maxLines="4">
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/main"
            android:text="@string/np_publish">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>