<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top|center">

        <LinearLayout
            android:id="@+id/titleLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Publicar servicio"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/newProductSmallTitle"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/sv_smalltitle"
                android:textColor="@color/black"
                android:textSize="16sp"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/productTitleET"
                android:layout_width="320dp"
                android:layout_height="35dp"
                android:background="@drawable/tb_background"
                android:hint="@string/np_name"
                android:maxLines="1"
                android:maxLength="30"
                android:textSize="15sp"></EditText>

            <EditText
                android:id="@+id/productDescriptionET"
                android:layout_width="320dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/tb_background"
                android:gravity="top|left"
                android:hint="@string/np_description"
                android:maxLines="8"
                android:maxLength="500"
                android:paddingTop="10dp"
                android:textSize="15sp"></EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/productPriceET"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/tb_background"
                    android:hint="@string/np_price"
                    android:maxLines="1"
                    android:maxLength="8"
                    android:textSize="15sp"></EditText>
                <Spinner
                    android:id="@+id/priceSpinner"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="30dp"
                    android:entries="@array/category_options_service"
                    android:gravity="end"
                    android:prompt="@string/select_rating_prompt"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Duración del servicio:"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"></TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/changeHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#50B8AE"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/textRS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="1 hora(s)"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/durationRS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="40dp"
                    android:stepSize="1"
                    android:valueFrom="1"
                    android:valueTo="12"
                    app:thumbColor="@color/main_clear">
                </com.google.android.material.slider.RangeSlider>
            </androidx.cardview.widget.CardView>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="320dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:entries="@array/category_options_service"
                android:prompt="@string/select_rating_prompt"/>

            <AutoCompleteTextView
                android:id="@+id/autoCompleteCity"
                android:layout_width="320dp"
                android:layout_height="35dp"
                android:background="@drawable/tb_background"
                android:hint="Ubicación del servicio"
                android:maxLines="1"
                android:maxLength="30"
                android:layout_marginTop="30dp"
                android:textSize="15sp">
            </AutoCompleteTextView>

            <EditText
                android:id="@+id/requirements"
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/tb_background"
                android:gravity="top|left"
                android:hint="Requisitos adicionales"
                android:maxLines="8"
                android:maxLength="500"
                android:paddingTop="10dp"
                android:textSize="15sp"></EditText>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/main"
                android:text="@string/np_next"></Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>