<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.main.publish.ImageActivity">

    <LinearLayout
        android:id="@+id/titleLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/newProductTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Añadir imagen"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/newProductSmallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/np_smallimage"
            android:textColor="@color/black"
            android:textSize="16sp"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageAndButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLL">

        <TextView
            android:id="@+id/imageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/np_imagetitle"
            android:textColor="@color/black"
            android:textSize="16sp"></TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="325dp"
            android:layout_height="200dp"
            android:src="@drawable/iv_border"></ImageView>

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main"
            android:text="Seleccionar imagen..."></Button>
    </LinearLayout>

    <Button
        android:id="@+id/publishButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/main"
        android:text="@string/np_publish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAndButton"></Button>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/pb_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>